# vol

./: .dockerignore  .env.example  .env.vol-agent.example  .gitignore  .mcp.json  20260411_132309_今日市场分析.pptx  20260411_154522_Deribit_期权监控系统.pptx  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.agent-manager  Dockerfile.agent-server  Dockerfile.agent-server.alpine  Dockerfile.cross-compile  Makefile  README.md  agent-code-export.md  channel-monitor-architecture.md  clippy.toml  config.agent-test.toml  config.dev.toml  config.feishu-test.toml  config.prod.toml  config.toml  config.toml.example  config.vol-agent.example.toml  lark-react-source.md  lark-upload.md  local-test.md  snapshot-after-select.md  snapshot-agents.md  snapshot-debug.md  snapshot-dropdown.md  snapshot-nodelist.md  snapshot-response.md  test-current.md  test-debug.md  test-dropdown.md  test-new.md
crates/ppt-agent/: Cargo.toml
crates/ppt-agent/src/: main.rs
crates/vol-agent-manager/: Cargo.toml  config.toml
crates/vol-agent-manager/src/: config.rs  instance.rs  lib.rs  main.rs
crates/vol-agent-manager/tests/: integration.rs
crates/vol-agent-server/: Cargo.toml
crates/vol-agent-server/src/: app.rs  config.rs  lib.rs  main.rs  routes.rs
crates/vol-agent-server/tests/: agent_run_client.rs  agent_server_agent_flow_test.rs  jsonrpc_e2e_test.rs  role_modes.rs  sandbox_protocol_integration.rs  server_core_dispatch_test.rs  server_core_non_agent_domains_test.rs  ws_transport_core_test.rs
crates/vol-alert/: Cargo.toml
crates/vol-alert/src/: absolute_iv.rs  lib.rs  manager.rs  portfolio.rs  rate_change.rs  skew.rs  term_structure.rs
crates/vol-core/: Cargo.toml
crates/vol-core/src/: alert.rs  datasource.rs  error.rs  event.rs  lib.rs  models.rs  notification.rs  rule.rs
crates/vol-datasource/: Cargo.toml
crates/vol-datasource/src/: csv.rs  deribit.rs  lib.rs  portfolio.rs  registry.rs  volatility.rs
crates/vol-deribit/: Cargo.toml
crates/vol-deribit/src/: client.rs  instrument.rs  lib.rs  market_data.rs  message.rs  portfolio.rs  positions.rs  subscription.rs  subscription_manager.rs
crates/vol-engine/: Cargo.toml
crates/vol-engine/src/: builder.rs  config.rs  engine.rs  lib.rs  registry.rs
crates/vol-feishu/: Cargo.toml
crates/vol-feishu/src/: client.rs  lib.rs
crates/vol-llm-agent/: Cargo.toml
crates/vol-llm-agent-channel/: Cargo.toml
crates/vol-llm-agent-channel/examples/: jsonrpc_agent_service.rs  multi_agent.rs  single_agent.rs
crates/vol-llm-agent-channel/src/: agent_server_protocol.rs  connection.rs  dispatcher.rs  error.rs  lib.rs  operation_codec.rs  protocol.rs  request.rs  router.rs  server_core.rs
crates/vol-llm-agent-channel/tests/: agent_server_agent_flow_test.rs  agent_server_protocol_codec_test.rs  connection_protocol_test.rs  http_transport_core_test.rs  jsonrpc_e2e_test.rs  jsonrpc_integration.rs  jsonrpc_ws_gateway_test.rs  server_core_dispatch_test.rs  server_core_non_agent_domains_test.rs  ws_transport_core_test.rs
crates/vol-llm-agent-protocol/: Cargo.toml
crates/vol-llm-agent-protocol/src/: agent_server_protocol.rs  connection.rs  error.rs  lib.rs  operation_codec.rs  request.rs  service.rs
crates/vol-llm-agent-protocol/tests/: agent_server_protocol_codec_test.rs  connection_protocol_test.rs  jsonrpc_integration.rs  jsonrpc_ws_gateway_test.rs
crates/vol-llm-agent/examples/: agent_cli_approval.rs  agent_observability_test.rs  qa_agent_example.rs  rag_example.rs  session_example.rs
crates/vol-llm-agent/src/: agent.rs  agent_def.rs  agent_loader.rs  agent_tool.rs  builder.rs  lib.rs  response.rs
crates/vol-llm-agent/tests/: agent_alert_scenario.rs  agent_llm_integration.rs  agent_message_history_test.rs  agent_run_tests.rs  code_agent_simulation.rs  compression_flow_test.rs  compression_strategies_test.rs  debug_agent_output.rs  observability_integration.rs  plugin_flow_test.rs  plugin_test.rs  prompt_context_integration.rs  react_agent_integration.rs  react_mock_test.rs  session_history_test.rs  session_recording_test.rs
crates/vol-llm-agents/: CODING_AGENT.md  Cargo.toml
crates/vol-llm-agents/examples/: agent_loki_example.rs  coding_agent_basic.rs  coding_agent_wordcount.rs  coding_task.txt  docs_rs_mcp_example.rs  k8s_ops_agent.md  qa_agent_example.rs
crates/vol-llm-agents/src/: lib.rs
crates/vol-llm-agents/tests/: advice_agent_integration.rs  agent_loki_integration.rs  channelled_observer_integration.rs  channelled_observer_unit.rs  coding_deribit_ws_e2e.rs  coding_e2e_test.rs  coding_web_tools_integration.rs  e2e_log_counter_cli.rs  observer_integration.rs  observer_plugin_unit.rs  ppt_agent_integration.rs  ppt_template_unit.rs  ppt_types_unit.rs  sandbox_local_test.rs  skill_session_integration.rs  tool_context_sandbox_test.rs
crates/vol-llm-bridge/: Cargo.toml
crates/vol-llm-bridge/src/: lib.rs  limiter.rs  prompt.rs  service.rs
crates/vol-llm-cli-tool/: Cargo.toml
crates/vol-llm-cli-tool/src/: config.rs  error.rs  exec.rs  interpolate.rs  lib.rs  validate.rs
crates/vol-llm-context/: Cargo.toml
crates/vol-llm-context/src/: block.rs  builder.rs  context_block.rs  context_contributor.rs  contributor.rs  lib.rs
crates/vol-llm-mcp/: Cargo.toml
crates/vol-llm-mcp/src/: config.rs  error.rs  lib.rs  manager.rs  session.rs
crates/vol-llm-memory/: Cargo.toml
crates/vol-llm-memory/src/: item.rs  lib.rs  manager.rs  memory_store.rs  retriever.rs  store.rs
crates/vol-llm-memory/tests/: memory_test.rs
crates/vol-llm-observability/: Cargo.toml
crates/vol-llm-observability/src/: agent_client.rs  agent_config.rs  agent_plugin.rs  config.rs  lib.rs  loki_plugin.rs  metrics_plugin.rs  otel_init.rs  (+1 more)
crates/vol-llm-provider/: Cargo.toml
crates/vol-llm-runtime/: Cargo.toml
crates/vol-llm-sandbox/: Cargo.toml
crates/vol-llm-skill/: Cargo.toml
crates/vol-llm-task/: Cargo.toml
crates/vol-llm-tdengine/: Cargo.toml
crates/vol-llm-tool/: Cargo.toml
crates/vol-llm-tools-builtin/: Cargo.toml  README.md
crates/vol-llm-tui/: Cargo.toml
crates/vol-llm-ui/: Cargo.toml  build.rs  index.html  package-lock.json  package.json
(+1303 files in other folders)
