[workspace]
resolver = "2"
members = [
    "crates/vol-core",
    "crates/vol-eventbus",
    "crates/vol-config",
    "crates/vol-datasource",
    "crates/vol-deribit",
    "crates/vol-alert",
    "crates/vol-notification",
    "crates/vol-monitor",
    "crates/vol-engine",
    "crates/vol-rules",
    "crates/vol-tracing",
    "crates/vol-llm-core",
    "crates/vol-llm-provider",
    "crates/vol-llm-tool",
    "crates/vol-llm-agent",
    "crates/vol-llm-agents",
    "crates/vol-tdengine",
    "crates/vol-llm-tdengine",
    "crates/ppt-agent",
    "crates/vol-session",
    "crates/vol-llm-tools-builtin",
    "crates/vol-llm-tui",
    "crates/vol-llm-observability",
    "crates/vol-llm-memory",
    "crates/vol-llm-skill",
    "crates/vol-llm-context",
    "crates/vol-llm-task",
    "crates/vol-llm-wiki",
    "crates/vol-llm-yaml-agent",
    "crates/vol-llm-agent-channel",
    "crates/vol-llm-ui",
    "crates/vol-agent-manager",
    "crates/md-frontmatter",
    "crates/vol-mcp-servers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Deribit Vol Monitor"]
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# HTTP / Web
axum = { version = "0.7", features = ["ws", "query"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
prometheus = "0.13"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.8"

# Internal crates
vol-llm-core = { path = "crates/vol-llm-core" }
vol-llm-provider = { path = "crates/vol-llm-provider" }
vol-llm-tool = { path = "crates/vol-llm-tool" }
vol-llm-agent = { path = "crates/vol-llm-agent" }
vol-llm-agents = { path = "crates/vol-llm-agents" }
vol-tdengine = { path = "crates/vol-tdengine" }
vol-llm-tdengine = { path = "crates/vol-llm-tdengine" }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tracing & Observability
tracing-appender = "0.2"
tracing-opentelemetry = "0.30"
rolling-file = "0.2"
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["tokio", "trace", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["tokio", "grpc-tonic", "logs"] }
opentelemetry-appender-tracing = "0.29"

# Feishu/Lark SDK
openlark = { version = "0.15.0-rc.2", default-features = false, features = ["auth", "communication"] }

# Crypto (for Feishu HMAC)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Data structures
indexmap = "2.1"
dashmap = "6"
uuid = { version = "1.6", features = ["v4"] }

# Internal crates
vol-core = { path = "crates/vol-core" }
vol-eventbus = { path = "crates/vol-eventbus" }
vol-config = { path = "crates/vol-config" }
vol-datasource = { path = "crates/vol-datasource" }
vol-deribit = { path = "crates/vol-deribit" }
vol-alert = { path = "crates/vol-alert" }
vol-notification = { path = "crates/vol-notification" }
vol-engine = { path = "crates/vol-engine" }
vol-rules = { path = "crates/vol-rules" }
vol-tracing = { path = "crates/vol-tracing" }
vol-session = { path = "crates/vol-session" }
vol-llm-observability = { path = "crates/vol-llm-observability" }
vol-llm-memory = { path = "crates/vol-llm-memory" }
vol-llm-skill = { path = "crates/vol-llm-skill" }
vol-llm-context = { path = "crates/vol-llm-context" }
vol-llm-task = { path = "crates/vol-llm-task" }
vol-llm-tools-builtin = { path = "crates/vol-llm-tools-builtin" }
vol-llm-wiki = { path = "crates/vol-llm-wiki" }
md-frontmatter = { path = "crates/md-frontmatter" }
vol-llm-agent-channel = { path = "crates/vol-llm-agent-channel" }
vol-mcp-servers = { path = "crates/vol-mcp-servers" }
dirs = "5.0"
