[package]
name = "vol-agent-manager"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
prometheus = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
http-body-util = "0.1"
http = "1.1"
