[package]
name = "vol-agent-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vol-agent-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
vol-llm-agent-channel = { path = "../vol-llm-agent-channel" }
vol-llm-runtime = { path = "../vol-llm-runtime" }
