[package]
name = "vol-alert"
version.workspace = true
edition.workspace = true


[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
vol-core = { workspace = true }
vol-config = { workspace = true }
vol-tracing = { workspace = true }
