[package]
name = "vol-datasource"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-rustls = { version = "0.25", features = ["ring"] }
rustls = "0.22"
webpki-roots = "0.26"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"
vol-core = { workspace = true }
vol-deribit = { workspace = true }
vol-config = { workspace = true }
vol-tracing = { path = "../vol-tracing" }
