[package]
name = "vol-engine"
version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

vol-core = { workspace = true }
vol-alert = { path = "../vol-alert" }
vol-config = { path = "../vol-config" }
vol-tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
