[package]
name = "vol-feishu"
version.workspace = true
edition.workspace = true
description = "Feishu/Lark API client for notifications"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
