[package]
name = "vol-llm-agent-channel"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
vol-llm-agent = { path = "../vol-llm-agent" }

[dev-dependencies]
tempfile = "3"
