[package]
name = "vol-llm-agent-channel"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
vol-llm-agent = { path = "../vol-llm-agent" }
async-trait = { workspace = true }
axum = { workspace = true }
futures = "0.3"
tokio-tungstenite = { workspace = true }
chrono = { workspace = true }
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
vol-session = { path = "../vol-session" }
vol-llm-context = { path = "../vol-llm-context" }
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-core = { path = "../vol-llm-core" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
