[package]
name = "vol-llm-agent-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
vol-llm-agent = { path = "../vol-llm-agent" }
async-trait = { workspace = true }
axum = { workspace = true }
futures = "0.3"
vol-llm-sandbox = { path = "../vol-llm-sandbox" }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
vol-llm-core = { path = "../vol-llm-core" }
tracing-subscriber = { workspace = true }
