[package]
name = "vol-llm-agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
vol-llm-core = { path = "../vol-llm-core" }
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-provider = { path = "../vol-llm-provider" }

[dev-dependencies]
tracing-subscriber = "0.3"
chrono = "0.4"
