[package]
name = "vol-llm-agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
reqwest = { workspace = true }
vol-llm-core = { path = "../vol-llm-core" }
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-provider = { path = "../vol-llm-provider" }

[dev-dependencies]
tracing-subscriber = "0.3"
chrono = "0.4"
vol-tdengine = { path = "../vol-tdengine" }
vol-llm-tdengine = { path = "../vol-llm-tdengine" }
