[package]
name = "vol-llm-agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
reqwest = { workspace = true }
regex = "1.10"
once_cell = "1.19"
tracing-appender = "0.2"
futures = "0.3"
vol-llm-observability = { path = "../vol-llm-observability" }
vol-llm-core = { path = "../vol-llm-core" }
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-provider = { path = "../vol-llm-provider" }
vol-session = { path = "../vol-session" }
vol-tracing = { path = "../vol-tracing" }

# Optional HTTP channel support
axum = { version = "0.7", optional = true }

[features]
default = []
http = ["axum"]

[dev-dependencies]
tracing-subscriber = "0.3"
chrono = "0.4"
vol-tdengine = { path = "../vol-tdengine" }
vol-llm-tdengine = { path = "../vol-llm-tdengine" }
vol-llm-core = { path = "../vol-llm-core", features = ["test-utils"] }
tempfile = "3"
