[package]
name = "vol-llm-agents"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
pptx = "=0.1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
vol-core = { workspace = true }
vol-tracing = { workspace = true }
vol-notification = { workspace = true }
vol-llm-core = { path = "../vol-llm-core" }
vol-llm-agent = { path = "../vol-llm-agent" }
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-tdengine = { path = "../vol-llm-tdengine" }
vol-tdengine = { path = "../vol-tdengine" }
vol-llm-provider = { path = "../vol-llm-provider" }
