[package]
name = "vol-llm-context"
version.workspace = true
edition.workspace = true


[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
vol-llm-core = { workspace = true }
vol-llm-memory = { workspace = true }

[dev-dependencies]
tempfile = "3"
