[package]
name = "vol-llm-mcp"
version.workspace = true
edition.workspace = true


[lints]
workspace = true

[dependencies]
rmcp = { version = "1.6", features = ["client", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest-native-tls"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-util = "0.7"
dirs = "5.0"
reqwest = { version = "0.13", features = ["json", "rustls"] }
http = "1"
