[package]
name = "vol-llm-memory"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
vol-llm-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
