[package]
name = "vol-llm-observability"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
reqwest = { workspace = true }
vol-llm-core = { path = "../vol-llm-core" }
vol-llm-agent = { path = "../vol-llm-agent" }

[dev-dependencies]
tracing-subscriber = "0.3"
vol-session = { path = "../vol-session" }
vol-llm-tool = { path = "../vol-llm-tool" }
