[package]
name = "vol-llm-observability"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
reqwest = { workspace = true }
vol-llm-core = { path = "../vol-llm-core" }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { workspace = true }
