[package]
name = "vol-llm-observability"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["tokio", "grpc-tonic", "logs"] }
opentelemetry-appender-tracing = { workspace = true }
tempfile = "3"
reqwest = { workspace = true }
vol-llm-core = { path = "../vol-llm-core" }
vol-llm-agent = { path = "../vol-llm-agent" }

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3"
vol-session = { path = "../vol-session" }
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-context = { path = "../vol-llm-context" }
tokio = { workspace = true }
