[package]
name = "vol-llm-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
ssh2 = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
ssh = ["ssh2"]
