[package]
name = "vol-llm-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
ssh2 = { workspace = true, optional = true }
shellexpand = "3"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[features]
default = []
ssh = ["ssh2"]
