[package]
name = "vol-llm-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
ssh2 = { workspace = true, optional = true }
shellexpand = "3"
tokio = { workspace = true }
wasmtime = { version = "22", optional = true }
wasmtime-wasi = { version = "22", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tempfile = "3"

[dev-dependencies]
wat = "1"

[features]
default = []
ssh = ["ssh2"]
firecracker = ["ssh"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
