[package]
name = "vol-llm-skill"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_yaml = "0.9"
vol-llm-core = { workspace = true }
vol-llm-context = { workspace = true }
vol-llm-tool = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = "3"
