[package]
name = "vol-llm-task"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
