[package]
name = "vol-llm-task"
version.workspace = true
edition.workspace = true


[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
dashmap = { workspace = true }
fd-lock = "4"
vol-llm-core = { workspace = true }
vol-llm-tool = { workspace = true }
clap = { version = "4", features = ["string"] }

[dev-dependencies]
tempfile = "3"
vol-llm-agent = { workspace = true }
vol-llm-provider = { workspace = true }
vol-llm-core = { workspace = true }
