[package]
name = "vol-llm-tdengine"
version.workspace = true
edition.workspace = true

[dependencies]
vol-tdengine = { path = "../vol-tdengine" }
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-core = { path = "../vol-llm-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
