[package]
name = "vol-llm-tool"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
vol-llm-core = { path = "../vol-llm-core" }
