[workspace]
resolver = "2"
members = [
    "read-tool",
    "write-tool",
    "edit-tool",
    "glob-tool",
    "grep-tool",
    "bash-tool",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
vol-llm-tool = { path = "../../vol-llm-tool" }
vol-llm-core = { path = "../../vol-llm-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = "0.3"
grep = "0.2"
walkdir = "2.4"
regex = "1.10"
