[workspace]
resolver = "2"
members = [
    "read-tool",
    "write-tool",
    "edit-tool",
    "glob-tool",
    "grep-tool",
    "bash-tool",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-core = { path = "../vol-llm-core" }
tokio = "1.35"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
glob = "0.3"
grep = "0.2"
walkdir = "2.4"
regex = "1.10"
