[package]
name = "vol-llm-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vol-llm-tui"
path = "src/main.rs"

[dependencies]
vol-llm-agent = { path = "../vol-llm-agent" }
vol-llm-agents = { path = "../vol-llm-agents" }
vol-llm-tools-builtin = { path = "../vol-llm-tools-builtin" }
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-core = { path = "../vol-llm-core" }
vol-llm-provider = { path = "../vol-llm-provider" }
vol-llm-observability = { path = "../vol-llm-observability" }
vol-config = { path = "../vol-config" }
vol-session = { path = "../vol-session" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = "0.3"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
ratatui-textarea = { version = "0.9", default-features = false, features = ["crossterm"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
