[package]
name = "vol-llm-ui"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "vol-llm-tui"
path = "src/tui/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "vol-llm-ui-web"
path = "src/web/bin/web.rs"
required-features = ["web"]

[dependencies]
vol-llm-agent = { path = "../vol-llm-agent" }
vol-llm-agent-channel = { path = "../vol-llm-agent-channel" }
vol-llm-core = { path = "../vol-llm-core" }
vol-llm-provider = { path = "../vol-llm-provider" }
vol-llm-tool = { path = "../vol-llm-tool" }
vol-llm-agents = { path = "../vol-llm-agents" }
vol-llm-skill = { path = "../vol-llm-skill" }
vol-llm-observability = { path = "../vol-llm-observability" }
vol-session = { path = "../vol-session" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0"

# TUI (optional, default feature)
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"], optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
futures = { version = "0.3", optional = true }
uuid = { workspace = true, optional = true }

# Web (optional)
dioxus = { version = "0.6", features = ["web"], optional = true }
log = { version = "0.4", optional = true }

# Remote connection (JSON-RPC over WS)
jsonrpsee = { version = "0.26", features = ["client", "wasm-client", "ws-client"] }

[dev-dependencies]
chrono = { workspace = true }
tempfile = "3"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:futures", "dep:uuid"]
web = ["dep:dioxus", "dep:log"]
