[package]
name = "vol-llm-ui"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "vol-llm-tui"
path = "src/tui/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "vol-llm-ui-web"
path = "src/web/bin/web.rs"
required-features = ["web"]

[dependencies]
# Core deps (WASM-compatible)
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0"

# TUI-only dependencies
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
vol-llm-agent = { path = "../vol-llm-agent", optional = true }
vol-llm-agent-channel = { path = "../vol-llm-agent-channel", optional = true }
vol-llm-core = { path = "../vol-llm-core", optional = true }
vol-llm-provider = { path = "../vol-llm-provider", optional = true }
vol-llm-tool = { path = "../vol-llm-tool", optional = true }
vol-llm-agents = { path = "../vol-llm-agents", optional = true }
vol-llm-skill = { path = "../vol-llm-skill", optional = true }
vol-llm-observability = { path = "../vol-llm-observability", optional = true }
vol-session = { path = "../vol-session", optional = true }
uuid = { workspace = true, optional = true }

# TUI (optional, default feature)
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"], optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
futures = { version = "0.3", optional = true }

# Web (optional)
dioxus = { version = "0.6", features = ["web"], optional = true }
log = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["WebSocket", "Window", "Location"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
futures-channel = { version = "0.3", features = ["sink"], optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
web-time = { version = "1", optional = true }

# Remote connection (JSON-RPC over WS) — TUI only
jsonrpsee = { version = "0.26", features = ["client", "ws-client"], optional = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[dev-dependencies]
chrono = { workspace = true }
tempfile = "3"

[build-dependencies]
chrono = { workspace = true }

[features]
default = ["tui"]
tui = [
    "dep:ratatui", "dep:crossterm", "dep:futures", "dep:uuid",
    "dep:tokio", "dep:async-trait",
    "dep:vol-llm-agent", "dep:vol-llm-agent-channel",
    "dep:vol-llm-core", "dep:vol-llm-provider", "dep:vol-llm-tool",
    "dep:vol-llm-agents", "dep:vol-llm-skill", "dep:vol-llm-observability",
    "dep:vol-session", "dep:jsonrpsee",
]
web = ["dep:dioxus", "dep:log", "dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:futures-channel", "dep:futures-core", "dep:futures-util", "dep:js-sys", "dep:web-time"]
